# concepts_of_programming_languages_2025_26

./: Grammar.md  concept.md  expose.md
compiler_proj/: Cargo.toml
compiler_proj/crates/ecs/: Cargo.toml
compiler_proj/crates/ecs/src/: lib.rs
compiler_proj/crates/ecs/src/system/: ecs_system.rs  mod.rs  system.rs  system_fn.rs  system_param.rs
compiler_proj/crates/parser/: Cargo.toml
compiler_proj/crates/parser/src/: ast.rs  ast_grammar.lalrpop  errors.rs  interpreter.rs  lexer.rs  lib.rs  scope.rs  typed.rs
compiler_proj/crates/parser/src/interpreter/: buildin.rs  interpreter.rs  mod.rs  preprocessor.rs  stage.rs
compiler_proj/crates/parser/src/stages/: buildin.rs  interpreter.rs  mod.rs  parser.rs  preprocessor.rs  stage.rs
compiler_proj/crates/parser/src/types/: component_type.rs  function_type.rs  interpreter_value.rs  mod.rs  scope.rs  struct_type.rs  system_type.rs  type_symbol.rs
compiler_proj/ecs/: Cargo.toml
compiler_proj/ecs/src/: lib.rs  system.rs  world.rs
compiler_proj/ecs/src/system/: mod.rs
compiler_proj/src/: main.rs
mylibffi/: Cargo.toml
mylibffi/lib/: Makefile  lib.c  lib.h  liblib.dylib
mylibffi/src/: main.rs
presentations/jit/: a.out  global-bottom.vue  global-top.vue  package-lock.json  package.json  pnpm-lock.yaml  slides.md  test.c  test.py
