[workspace]
members = ["crates/ecs", "crates/parser"]

[package]
name = "compiler_proj"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "./crates/parser" }
ecs = { workspace = true }
graphviz-rust = "0.9.6"

[workspace.dependencies]
typed-generational-arena = "0.2"
ecs = { path = "./crates/ecs" }
graphviz-rust = "0.9.6"
