[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
annotate-snippets = "0.12.9"
thiserror = "2.0.17"
derivative = "2.2.0"
typed-generational-arena = {workspace = true}
ecs = {workspace = true}
graphviz-rust = {workspace = true}
